# studies-cpp-effective-programming-techniques

./: .gitignore  README.md
TEP_Lab1/: CTable.cpp  CTable.h  constants.h  main.cpp
TEP_Lab2/: CNumber.cpp  CNumber.h  constants.h  functions.cpp  functions.h  main.cpp
TEP_Lab3/: CMakeLists.txt  CNode.h  CTree.cpp  CTree.h  CTreeUI.cpp  constants.h  main.cpp
TEP_Lab4/: CMakeLists.txt  Result_T_E.h  main.cpp
TEP_Lab4/error/: Error.cpp  Error.h
TEP_Lab4/saver/: Saver.h
TEP_Lab4/specializations/: Result_void_E.h
TEP_Lab4/tree/: CInfo.cpp  CNode.cpp  CTree.cpp  CTree.h  CTreeUI.cpp  CTreeUI.h
TEP_Lab5/: CMakeLists.txt  RefCounter.h  SmartPointer.h  main.cpp  zad3
TEP_Lab5/tree/: CInfo.h  CTree.cpp  CTree.h  CTreeUI.cpp
TEP_Mod1/: Course.cpp  Course.h  Student.cpp  Student.h  constants.h  main.cpp
TEP_Mod4/: CMakeLists.txt  Mapper.h  Repeat.h  main.cpp
TEP_Proj/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GroupingChallenge.cpp  Individual.cpp  Individual.h  Optimizer.h
TEP_Proj/GeneticProject/: GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GroupingEvaluator.cpp  GroupingEvaluator.h  Point.cpp  Point.h
